--- a/news.html
+++ b/news.html
@@ -201,11 +201,11 @@
           <div class="col-sm-4 text-center">
               <h3 class="text-center font-weight-bold" style="color: #cc8b08">Important Links</h3>
               <ul class="list-unstyled">
-                  <li><a class="col" href="#">About us</a></li>
+                  <li><a class="col" href="aboutus.html">About us</a></li>
                   <hr class="my-3">
-                  <li><a class="col" href="#">Privacy</a></li>
+                  <li><a class="col" href="privacy.html">Privacy</a></li>
                   <hr class="my-3">
-                  <li><a class="col" href="#">Sitemap</a></li>
+                  <li><a class="col" href="cookiepolicy.html">Cookie</a></li>
                   <hr class="my-3">
                   <li><a class="col" href="#">Contact us</a></li>
               </ul>
@@ -218,14 +218,14 @@ Organiser - Voice of the nation. The oldest and most widely circulated nationali
          </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
-              <div class="text-center">
+            <div class="text-center">
 
-                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.facebook.com/eOrganiser/"><i class="fa fa-facebook fa-lg"></i></a> 
-                  <hr>
-                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://twitter.com/eOrganiser"><i class="fa fa-twitter fa-lg"></i></a>
-                  <hr>
-                  <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.youtube.com/c/eOrganiser"><i class="fa fa-youtube fa-lg"></i></a>
-              </div>
+              <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.facebook.com/eOrganiser/"><i class="fa fa-facebook fa-lg"></i></a> 
+              <hr>
+              <a class="btn btn-social-icon" style="color:#888f96;"  href="https://twitter.com/eOrganiser"><i class="fa fa-twitter fa-lg"></i></a>
+              <hr>
+              <a class="btn btn-social-icon" style="color:#888f96;" href="https://www.youtube.com/c/eOrganiser"><i class="fa fa-youtube fa-lg"></i></a>
+          </div>
           </div>
      </div>
      <div class="row justify-content-center">             
