--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
     }
    .content{
     font-family: 'Baloo 2', cursive;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     text-align: justify;
    }
    .category1{
@@ -79,6 +79,7 @@
   }
   .fontt{
     font-family: 'Poppins', sans-serif;
+    font-size:2.6rem;
 
     color: #191816;
 
@@ -224,7 +225,7 @@
  </div>
    
  <div class="modal-body">
-  <div class="content2">
+  <div class="content2" style="text-align: center;">
   </div>
   
 
