--- a/subscription.html
+++ b/subscription.html
@@ -218,7 +218,7 @@ padding-right: 10px;
 
       </div>
       <div class="col-sm-5 pr-0">
-        <img class="subimg rounded-circle mt-2 " src="./images/avatar.png">
+        <img class="subimg rounded-circle mt-2 " src="./images/avatar1.png">
         <div class="mt-3 fontt user1">
         
         </div>
