--- a/news.html
+++ b/news.html
@@ -65,13 +65,17 @@
     text-align: justify;
    }
    .category1{
-     background-color: orange;
+     background-color:#ED6206;
      width: 60%;
      margin: auto;
      
     font-size: 2rem;
     font-weight: 600;
     color: white !important;
+   }
+   .pagination1{
+    padding: 15px;
+    font-size: 18px;
    }
   .body
   {
@@ -210,59 +214,86 @@
   </div> -->
 
 
-  <a id="category" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn mobile category1" >Categories</a>
+<!-- dropdown mobile view -->
+<a id="category" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn mobile category1" >Categories</a>
  
 
 
 
-  <div class="modal-content none mobile" style="border: none;">
-    <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
- <div class="modal-content">
-   <div class="modal-header">
-     <h3 class="modal-title">Categories</h3>
-     <button type="button" class="close" data-dismiss="modal">&times;</button>
+<div class="modal-content none mobile" style="border: none;">
+  <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+<div class="modal-content">
+ <div class="modal-header">
+   <h3 class="modal-title">Categories</h3>
+   <button type="button" class="close" data-dismiss="modal">&times;</button>
+</div>
+ 
+<div class="modal-body">
+<div class="content5" style="text-align: center;">
+ 
+</div>
+<div class="content2" style="text-align: center;">
+ 
+</div>
+
+
+   </div>
+ <div class="modal-footer">
+ 
+   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
  </div>
-   
- <div class="modal-body">
-  <div class="content2" style="text-align: center;">
+</div>
+
+</div>
+</div>
+</div>
+
+
+<!-- dropdown mobile view -->
+
+
+
+<div class="row m-1 justify-content-between">
+ <div class="col-sm-2 mx-2" id="computer">
+   <h1 class="font-weight-bold" style="font-size: 3rem;text-align: center; font-family: 'Poppins';">
+     Categories
+   </h1>
+   <div class="content4">
+
   </div>
-  
+   <div class="content3">
 
-     </div>
-   <div class="modal-footer">
-   
-     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
    </div>
+
  </div>
+ <div class="col-sm-9 news-add mx-4">
 
-</div>
-</div>
-</div>
-
-
-<!-- dropdown mobile view -->
-<!-- dropdown mobile view -->
-
-
- <div class="row m-1 justify-content-between">
-   <div class="col-sm-2 mx-2" id="computer">
-     <h1 class="font-weight-bold" style="font-size: 3rem;text-align: center; font-family: 'Poppins';">
-       Categories
-     </h1>
-     <div class="content3">
-
-     </div>
-
-   </div>
-   <div class="col-sm-9 news-add ml-4">
-
-   </div>
  </div>
+</div>
 
 
+<!-- pagination -->
+
+<nav aria-label="Page navigation example" style="text-align: center;">
+<ul class="pagination">
+  <li class="page-item">
+    <a id="previous" onclick="previous()" class="page-link pagination1" href="news.html" aria-label="Previous">
+      <span aria-hidden="true">&laquo;</span>
+      <span class="sr-only">Previous</span>
+    </a>
+  </li>
+  <li class="page-item">
+    <a id="next" onclick="next()" class="page-link pagination1" href="news.html" aria-label="Next">
+      <span aria-hidden="true">&raquo;</span>
+      <span class="sr-only">Next</span>
+    </a>
+  </li>
+</ul>
+</nav>
 
 
+<!-- pagination -->
   
 
 <hr>
