--- a/pdfview1.html
+++ b/pdfview1.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organiser</title>
   <style>
-    body, html {
+    body,
+    html {
       height: 100%;
       margin: 0px;
     }
   </style>
 </head>
+
 <body style="height: 100%">
   <div id="viewer" style="width: 100%; height: 100%; "></div>
   <script>
-    document.addEventListener('DOMContentLoaded', function(){
-      const config = { 
+    document.addEventListener('DOMContentLoaded', function () {
+      const config = {
         documentId: '67ccd4d7-2675-486d-ac94-7ba7de2d339f',
         darkMode: true
       };
@@ -25,5 +28,7 @@
       });
     });
   </script>
-  <script type="text/javascript" src="./js/viewer.min.js?0e91f239215aff5c29b7"></script></body>
+  <script type="text/javascript" src="./js/viewer.min.js?0e91f239215aff5c29b7"></script>
+</body>
+
 </html>
