--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="navbar-header">
-    <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img style="height: 40px;" src="./images/org.png"></a>
+    <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img style="height: 40px;" src="./images/org.svg"></a>
   </div>
 </nav>
 <!-- loader -->
