--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 .navbar-brand {float:none;}
 .footer{
   width: 100%;
-  bottom: -120px;
+  bottom: 0px;
   position: relative;
 }
 
@@ -405,6 +405,16 @@ width: 31px;"><span class="loader-inner"></span></span>
         </div>
     </div>
 </div>
+
+
+<div class="hsds mb-3" style="width: 200px; margin: auto; text-align: center; margin-top: 40px;">
+  <h6 class="mb-1" style="font-size: 0.9rem;">Developed By</h6>
+  <img src="./images/chidiya.svg" height="40px" width="40px">
+  <h5 class="mb-0 mt-1" style="font-size: 0.8rem; font-weight: 600;">Humming Sparrow</h5>
+  <h6 class="my-0" style="font-size: 0.8rem;">Digital Solutions</h6>
+  <h6 class="mt-0" style="font-size: 0.8rem; font-weight: 600;">H S D S</h6>
+</div>
+
 
 <!-- footer -->
 <footer class="footer">
