append country code

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ width: 31px;"><span class="loader-inner"></span></span>
 
                   <div class="form-group col-sm-9 mt-2 mb-4" style="width: 80%;">
                     <label class="content">Select Country</label>
-                    <select class="form-select form-select-lg content" onmousedown="if(this.options.length>6){this.size=6;}" onchange="this.size=0;" onblur="this.size=0;" style="position: absolute"  aria-label="Default select example">
+                    <select id="country" class="form-select form-select-lg content" onmousedown="if(this.options.length>6){this.size=6;}" onchange="this.size=0;" onblur="this.size=0;" style="position: absolute"  aria-label="Default select example">
                       <option style="text-align: center;" data-countryCode="IN" value="91" selected>India </option>
                         <option data-countryCode="DZ" value="213">Algeria </option>
                         <option data-countryCode="AD" value="376">Andorra </option>
