--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ width: 31px;"><span class="loader-inner"></span></span>
 
 
                   <style>
-                    select #country :disabled{
-                      background-color: #ED6206 !important;
+                    select #country :disabled:hover,select #country :disabled:active,select #country :disabled:focus{
+                      background: #ED6206 !important;
                     }
                   </style>
                   <div class="form-group col-sm-9 mt-2 mb-4" style="width: 80%;">
