--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="./css/otpInput.css">
+<script src="./js/otpInput.js"></script>
 
   <script>
     window.onload = function () {
@@ -438,7 +439,7 @@
             <div class="form-group col-sm-9 mb-1 content" style="width: 80%; margin-top: 1rem; margin-bottom: 2rem !important;">
               <div> An Otp has been sent to Your Phone</div>
             </div>
-
+            
             <div class="form-group col-sm-9" style="width: 80%;">
               <label class="sr-only " for="exampleInputEmail3">Enter OTP</label>
               <input type="text" id="otp1" class="form-control form-control-sm mr-1 mt-4 mb-3" required placeholder="enter OTP">
