--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ background-color: white;
           <div class="form-row justify-content-center mt-1">
 
             <div class="form-group col-sm-9 mb-1 content" style="width: 80%; margin-top: 1rem; margin-bottom: 2rem !important;">
-              <div> An Otp has been sent to Your Phone</div>
+              <div class="content"> An Otp has been sent to Your Phone</div>
             </div>
             
             <div class="form-group col-sm-9" style="width: 80%;">
