--- a/news.html
+++ b/news.html
@@ -118,8 +118,9 @@
     }
     .newsbtn{
       font-weight: 400;
-      padding-left: 20px;
+      padding-left: 25px;
       text-align: left;
+      width: 70%!important;
     }
   </style>
 </head>
