index phone page

--- a/news.html
+++ b/news.html
@@ -120,6 +120,7 @@
       font-weight: 400;
       padding-left: 25px;
       text-align: left;
+      background-color: #f7f7f7;
     }
   </style>
 </head>
