index phone page

--- a/news.html
+++ b/news.html
@@ -121,6 +121,7 @@
       padding-left: 25px;
       text-align: left;
       background-color: #f7f7f7;
+      color: #616161;
     }
   </style>
 </head>
