index phone page

--- a/news.html
+++ b/news.html
@@ -288,7 +288,7 @@
 
   <div class="row m-1 justify-content-between">
     <div class="col-sm-2 mx-2" id="computer">
-      <h1 class="font-weight-bold" style="font-size: 3rem;text-align: center; font-family: 'Poppins';">
+      <h1 class="font-weight-bold" style="font-size: 3rem;text-align: center; font-family: 'Poppins'; color:#a5a5a5;">
         Categories
       </h1>
       <div class="content4">
