--- a/subscription.html
+++ b/subscription.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./css/loader.css">
+<link rel="stylesheet" href="./css/nav.css">
  
 
   <style>
@@ -42,10 +42,6 @@ padding-left: 10px;
 padding-right: 10px;
   }
 }
-    .navbar{
-      background-color: #1A322B !important;
-      
-    }
     .firstrow{
       background-color: #EFEFEF;
       color:#ED6206;
@@ -93,9 +89,7 @@ padding-right: 10px;
 </head>
 <body style="padding-right: 0px;">
 
-<!-- <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
-  <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
-</div> -->
+
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
@@ -103,29 +97,39 @@ padding-right: 10px;
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
-          </li>   
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="vid()" ><i class="fas fa-play"></i> VIDEOS</a>
-      </li>   
-       
-    </ul>
+
 
   </div> 
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul style="float:right;" style="float:right" class="nav navbar-nav topnav-right" >
-      <li class="nav-item">
-      <!-- <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a> -->
+
+  <li class="nav-item mx-4">
+    <a class="nav-link btn" onclick="news()">
+      <div class="m-0 p-0"><img src="./images/home.svg" class="navimg"> <span class="navtext">HOME</span>
+      </div>
+    </a>
+  </li>
+  <li class="nav-item mx-4">
+    <a class="nav-link btn" onclick="magazine()">
+      <div class="m-0 p-0"><img src="./images/emag.svg" class="navimg"> <span class="navtext">E-MAGAZINE</span>
+      </div> 
+    </a>
+  </li>
+  <li class="nav-item mx-4">
+    <a class="nav-link btn" onclick="vid()" >
+      <div class="m-0 p-0"><img src="./images/video.svg" class="navimg"> <span class="navtext">VIDEOS</span>
+      </div> 
+    </a>
+  </li>   
+  <li class="nav-item mx-4">
+    <a class="nav-link btn" onclick="subscription()" >
+      <div class="m-0 p-0"><img src="./images/profile.svg" class="navimg"> <span class="navtext">PROFILE</span>
+      </div>
+    </a>
+</li>   
+      <!-- <li class="nav-item">
       <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
-    </li>
+    </li> -->
   </ul>  
   </div>
        <!-- <ul class="nav navbar-nav topnav-right">
