--- a/subscription.html
+++ b/subscription.html
@@ -91,54 +91,56 @@ padding-right: 10px;
 
 
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
-
-  </div> 
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul style="float:right;" style="float:right" class="nav navbar-nav topnav-right" >
-
-  <li class="nav-item mx-4">
-    <a class="nav-link btn" onclick="news()">
-      <div class="m-0 p-0"><img src="./images/home.svg" class="navimg"> <span class="navtext"> HOME</span>
-      </div>
-    </a>
-  </li>
-  <li class="nav-item mx-4">
-    <a class="nav-link btn" onclick="magazine()">
-      <div class="m-0 p-0"><img src="./images/emag.svg" class="navimg"> <span class="navtext"> E-MAGAZINE</span>
-      </div> 
-    </a>
-  </li>
-  <li class="nav-item mx-4">
-    <a class="nav-link btn" onclick="vid()" >
-      <div class="m-0 p-0"><img src="./images/video.svg" class="navimg"> <span class="navtext"> VIDEOS</span>
-      </div> 
-    </a>
+<!-- nav -->
+<link rel="stylesheet" href="./css/nav.css">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+  
+  
+    </div> 
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul style="float:right;" style="float:right" class="nav navbar-nav topnav-right" >
+  
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="news()">
+        <div class="m-0 p-0"><img src="./images/home.svg" class="navimg"> <span class="navtext"> HOME</span>
+        </div>
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="magazine()">
+        <div class="m-0 p-0"><img src="./images/emag.svg" class="navimg"> <span class="navtext"> E-MAGAZINE</span>
+        </div> 
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="vid()" >
+        <div class="m-0 p-0"><img src="./images/video.svg" class="navimg"> <span class="navtext"> VIDEOS</span>
+        </div> 
+      </a>
+    </li>   
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="subscription()" >
+        <div class="m-0 p-0"><img src="./images/profile.svg" class="navimg"> <span class="navtext"> PROFILE</span>
+        </div>
+      </a>
   </li>   
-  <li class="nav-item mx-4">
-    <a class="nav-link btn" onclick="subscription()" >
-      <div class="m-0 p-0"><img src="./images/profile.svg" class="navimg"> <span class="navtext"> PROFILE</span>
-      </div>
-    </a>
-</li>   
-      <!-- <li class="nav-item">
-      <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
-    </li> -->
-  </ul>  
-  </div>
-       <!-- <ul class="nav navbar-nav topnav-right">
-        <li class="nav-item">
-        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
-      </li>
-    </ul>  -->
-</nav>
-
+        <!-- <li class="nav-item">
+        <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
+      </li> -->
+    </ul>  
+    </div>
+         <!-- <ul class="nav navbar-nav topnav-right">
+          <li class="nav-item">
+          <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
+        </li>
+      </ul>  -->
+  </nav>
+  <!-- nav -->
 <!-- loader -->
 
 
