--- a/indexbackup.html
+++ b/indexbackup.html
@@ -49,10 +49,7 @@
     width: 100%;
   }
   }
-  .navbar{
-      background-color: #1A322B !important;
-      
-    }
+
     .fontt{
     font-family: 'Abril Fatface', cursive;
     font-size: 3rem;
@@ -80,41 +77,58 @@
 </head>
 <body style="padding-right: 0px;">
 
-<!-- <div class="jumbotron text-center" style="margin-bottom:0" style="height: 100px;">
-  <img class="resp" src="https://www.organiser.org//Encyc/2019/2/7/organiser-logo.png">
-</div> -->
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="subscription()" ><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
-      </li>   
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" onclick="vid()" ><i class="fas fa-play"></i> VIDEOS</a>
-      </li>  
-       
-    </ul>
-  </div>  
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">  
-         <ul style="float:right;" class="nav navbar-nav topnav-right" id="collapsibleNavbar">
-        <li class="nav-item">
-        <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn"  style="margin-right: 10px;margin-left: 15px;">Login</a>
+
+<!-- nav -->
+<link rel="stylesheet" href="./css/nav.css">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+  
+  
+    </div> 
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul style="float:right;" style="float:right" class="nav navbar-nav topnav-right" >
+  
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="news()">
+        <div class="m-0 p-0"><img src="./images/home.svg" class="navimg"> <span class="navtext"> HOME</span>
+        </div>
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="magazine()">
+        <div class="m-0 p-0"><img src="./images/emag.svg" class="navimg"> <span class="navtext"> E-MAGAZINE</span>
+        </div> 
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="vid()" >
+        <div class="m-0 p-0"><img src="./images/video.svg" class="navimg"> <span class="navtext"> VIDEOS</span>
+        </div> 
+      </a>
+    </li>   
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="subscription()" >
+        <div class="m-0 p-0"><img src="./images/profile.svg" class="navimg"> <span class="navtext"> PROFILE</span>
+        </div>
+      </a>
+  </li>   
+        <!-- <li class="nav-item">
         <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
-      </li>
-    </ul> 
-  </div>
-</nav>
+      </li> -->
+    </ul>  
+    </div>
+         <!-- <ul class="nav navbar-nav topnav-right">
+          <li class="nav-item">
+          <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
+        </li>
+      </ul>  -->
+  </nav>
+  <!-- nav -->
 <!-- loader -->
 
 
