--- a/news.html
+++ b/news.html
@@ -6,7 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="./js/news.js"></script>
-  <script src="./js/number.js"></script>
   <script src="./js/baseUrl.js"></script>
   <script src="./js/authenticate.js"></script>
   <script src="./js/newsView.js"></script>
@@ -23,152 +22,66 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/08e3572502.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./css/loader.css">
   <link rel="stylesheet" href="./css/tw.css">
   <script src="./js/tw.js"></script>
+  <link rel="stylesheet" href="./css/news.css">
   <script>
     window.onload = function () {
       newsDisp();
     }
   </script>
 
-
-  <style>
-    .responsive {
-      width: 100%;
-    }
-
-    @media screen and (max-width: 500px) {
-      .resp {
-        width: 100%;
-      }
-    }
-
-    @media screen and (min-width: 0px) and (max-width: 935px) {
-      .mobile {
-        display: block;
-      }
-
-      /* show it on small screens */
-      #computer {
-        display: none;
-      }
-    }
-
-    @media screen and (min-width: 935px) {
-      .mobile {
-        display: none;
-      }
-
-      /* hide it elsewhere */
-      #computer {
-        display: block;
-      }
-    }
-
-    .navbar {
-      background-color: #1A322B !important;
-
-    }
-
-    .button1 {
-      background-color: #c5c3c3;
-      width: 100%;
-      color: white;
-      font-weight: 600;
-    }
-
-    .content {
-      font-family: 'Baloo 2', cursive;
-      font-size: 1.5rem;
-      text-align: justify;
-    }
-
-    .category1 {
-      background-color: #ED6206;
-      width: 60%;
-      margin: auto;
-
-      font-size: 2rem;
-      font-weight: 600;
-      color: white !important;
-    }
-
-    .pagination1 {
-      padding: 15px;
-      font-size: 18px;
-    }
-
-    .body {
-      padding-right: 0px;
-    }
-
-    .fontt {
-      font-family: 'Poppins', sans-serif;
-      font-size: 2.6rem;
-
-      color: #191816;
-
-    }
-
-    .rc {
-      border-radius: 25px;
-      padding-top: 4rem;
-    }
-    .btn{
-      outline: none!important;
-    }
-    .newsbtn{
-      font-weight: 400;
-      padding-left: 25px;
-      text-align: left;
-      background-color: #f7f7f7;
-      color: #616161;
-    }
-  </style>
 </head>
 
 <body style="padding-right: 0px;">
 
-
+<!-- nav -->
+<link rel="stylesheet" href="./css/nav.css">
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" style="padding-top: 10px;" href="index.html"><img src="./images/org.svg"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
+ 
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link btn" onclick="subscription()"><i class="fas fa-user-circle"></i> SUBCRIPTION</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn" onclick="news()"><i class="far fa-newspaper"> </i> NEWS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn" onclick="magazine()"><i class="fas fa-book-reader"></i> E-MAGAZINE</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn" onclick="vid()"><i class="fas fa-play"></i> VIDEOS</a>
-        </li>
-
-      </ul>
-
+      <ul style="float:right;" style="float:right" class="nav navbar-nav topnav-right" >
+  
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="news()">
+        <div class="m-0 p-0"><img src="./images/home.svg" class="navimg"> <span class="navtext"> HOME</span>
+        </div>
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="magazine()">
+        <div class="m-0 p-0"><img src="./images/emag.svg" class="navimg"> <span class="navtext"> E-MAGAZINE</span>
+        </div> 
+      </a>
+    </li>
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="vid()" >
+        <div class="m-0 p-0"><img src="./images/video.svg" class="navimg"> <span class="navtext"> VIDEOS</span>
+        </div> 
+      </a>
+    </li>   
+    <li class="nav-item mx-4">
+      <a class="nav-link btn" onclick="subscription()" >
+        <div class="m-0 p-0"><img src="./images/profile.svg" class="navimg"> <span class="navtext"> PROFILE</span>
+        </div>
+      </a>
+  </li>   
+        <!-- <li class="nav-item">
+        <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
+      </li> -->
+    </ul>  
     </div>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul style="float:right;" class="nav navbar-nav topnav-right">
-        <li class="nav-item">
-          <!-- <a id="login" data-toggle="modal"  data-target="#myModal" class="nav-link btn-mag btn" onclick="number()" style="margin-right: 10px;margin-left: 15px;">Login</a> -->
-          <a id="logout" class="nav-link btn-mag btn" onclick="logout()"
-            style="margin-right: 10px;margin-left: 15px;">Logout</a>
+         <!-- <ul class="nav navbar-nav topnav-right">
+          <li class="nav-item">
+          <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
         </li>
-      </ul>
-    </div>
-    <!-- <ul class="nav navbar-nav topnav-right">
-        <li class="nav-item">
-        <a data-toggle="modal" data-target="#myModal" class="nav-link btn-mag btn" onclick="number()">Login</a>
-      </li>
-    </ul>  -->
+      </ul>  -->
   </nav>
+  <!-- nav -->
 
   <!-- loader -->
 
