--- a/subscription.html
+++ b/subscription.html
@@ -129,9 +129,9 @@ padding-right: 10px;
         </div>
       </a>
   </li>   
-        <!-- <li class="nav-item">
+        <li class="nav-item">
         <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
-      </li> -->
+      </li>
     </ul>  
     </div>
          <!-- <ul class="nav navbar-nav topnav-right">
