--- a/subscription.html
+++ b/subscription.html
@@ -129,7 +129,7 @@ padding-right: 10px;
         </div>
       </a>
   </li>   
-        <li class="nav-item">
+        <li class="nav-item mx-4">
         <a id="logout"  class="nav-link btn-mag btn" onclick="logout()" style="margin-right: 10px;margin-left: 15px;">Logout</a>
       </li>
     </ul>  
